syntax = "proto3";

package price_calculator;

option csharp_namespace = "Route256.Week5.Homework.PriceCalculator.Grpc";

service PriceCalculator
{
	rpc CountDeliveryPrice (DeliveryPriceRequest) returns (DeliveryPriceResponse);
	rpc DeleteUserHistory (DeleteUserHistoryRequest) returns (Empty);
	rpc GetUserHistory (GetUserHistoryRequest) returns (stream HistoryResponse);
}

message DeliveryPriceRequest{
    int64 user_id = 1;
	repeated GoodEntity goods = 2;
}

message DeliveryPriceResponse{
	DecimalValue result = 1;
	
}

message DeleteUserHistoryRequest{
	int64 user_id = 1;
	repeated int64 good_ids = 2;
}

message GetUserHistoryRequest{
	int64 user_id = 1;
}

message HistoryResponse{
	int64 good_id = 1;	
	DecimalValue result = 2;
}

message DecimalValue {
  int64 units = 1;
  sfixed32 nanos = 2;
}

message Empty{}

message GoodEntity{
	double length = 1;
	double width = 2;
	double height = 3;
	double weight = 4;
}